# dataBobIQ

./: .gitignore  01-ARCHITECTURE-OVERVIEW.md  02-DATABASE-LAYER.md  03-DATA-INGESTION.md  04-CANONICAL-SCHEMA.md  05-PIVOT-API.md  06-SCENARIO-ENGINE.md  07-KPI-ENGINE.md  08-AI-AGENTS.md  09-AZURE-DEPLOYMENT.md  10-MIGRATION-ROADMAP.md  CLAUDE.md  CONVENTIONS.md  Dockerfile  IMPLEMENTATION.md  INTERFACES.md  Makefile  SCHEMAS.md  docker-compose.yml  plan.md  railway.toml
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_tables.py  0002_scenario_model_level.py  0003_add_dashboard_widgets.py  0004_dataset_sheet_name.py  0005_relationship_is_manual.py  0006_column_role_source.py
backend/app/: config.py  database.py  duckdb_engine.py  main.py
backend/app/api/: chat.py  dashboard.py  datasets.py  health.py  knowledge.py  kpis.py  metadata.py  models.py  pivot.py  scenarios.py
backend/app/fact_types/: financial_transactions.yaml  registry.py
backend/app/models/: metadata.py
backend/app/schemas/: chat.py  dashboard.py  datasets.py  knowledge.py  kpis.py  models.py  pivot.py  scenarios.py
backend/app/services/: ai_context.py  calendar_svc.py  chat_engine.py  column_mapper.py  fact_classifier.py  ingestion.py  knowledge_refs.py  kpi_engine.py  materializer.py  metadata_svc.py  parser.py  pivot_engine.py  relationship_detector.py  scenario_engine.py  schema_agent.py  storage.py
backend/static/: index.html
backend/static/assets/: index-9bKNtU6r.js  index-B-B6o94e.js  index-BFaN6zHW.js  (+19 more)
(+46 files in other folders)
